# urbansyncAi

data/chroma_db/: chroma.sqlite3
frontend/ward-dashboard/: package-lock.json  package.json  tailwind.config.js
frontend/ward-dashboard/src/: App.tsx
frontend/ward-dashboard/src/components/: IncidentMap.tsx  Sidebar.tsx
frontend/ward-dashboard/src/context/: IncidentContext.tsx
frontend/ward-dashboard/src/data/: mockIncidents.ts
frontend/ward-dashboard/src/pages/: ActionCard.tsx  Dashboard.tsx
services/gateway/: pyproject.toml  requirements.txt  seed_db.py
services/gateway/src/: main.py  test_exotel_webhook.py  test_iot_priority.py  test_orchestrator.py
services/gateway/src/agents/: base_agent.py  power_agent.py  traffic_agent.py  water_agent.py
services/gateway/src/core/: event_bus.py  rag_engine.py
services/gateway/src/models/: events.py
services/gateway/src/routers/: exotel.py  iot.py
